[gd_scene load_steps=4 format=2]

[ext_resource path="res://images/ui/Mana_Bars/orb_mp.png" type="Texture" id=1]
[ext_resource path="res://images/ui/Mana_Bars/orb_empty.png" type="Texture" id=2]
[ext_resource path="res://scripts/ManaBar.gd" type="Script" id=3]

[node name="ManaBar" type="Node2D"]
script = ExtResource( 3 )

[node name="orb_container1" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="orb_container2" type="Sprite" parent="."]
position = Vector2( 16, 0 )
texture = ExtResource( 2 )

[node name="orb_container3" type="Sprite" parent="."]
position = Vector2( 32, 0 )
texture = ExtResource( 2 )

[node name="orb_container4" type="Sprite" parent="."]
position = Vector2( 48, 0 )
texture = ExtResource( 2 )

[node name="orb_container5" type="Sprite" parent="."]
position = Vector2( 64, 0 )
texture = ExtResource( 2 )

[node name="orb1" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="orb2" type="Sprite" parent="."]
position = Vector2( 16, 0 )
texture = ExtResource( 1 )

[node name="orb3" type="Sprite" parent="."]
position = Vector2( 32, 0 )
texture = ExtResource( 1 )

[node name="orb4" type="Sprite" parent="."]
position = Vector2( 48, 0 )
texture = ExtResource( 1 )

[node name="orb5" type="Sprite" parent="."]
position = Vector2( 64, 0 )
texture = ExtResource( 1 )
